--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     airium>=0.2.3
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
+    cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
     defusedxml>=0.7.1
     isort>=5.0.1
     pygments
