Update to `urllib3>=1.25.9` in test dependencies
Fixes CVE-2020-26137 found by Safety:

```
-> Vulnerability found in urllib3 version 1.25.8
   Vulnerability ID: 38834
   Affected spec: <1.25.9
   ADVISORY: Urllib3 before 1.25.9 allows CRLF injection if the attacker
   controls the HTTP request method, as demonstrated by inserting CR and LF...
   CVE-2020-26137
   For more information, please visit
   https://pyup.io/vulnerabilities/CVE-2020-26137/38834/
```

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ test =
     twine>=2.0.0
     types-requests>=2.27.9
     types-toml>=0.10.4
+    urllib3>=1.25.9  # through requests-cache and twine, fixes CVE-2020-26137
     wheel>=0.21.0
 release =
     airium>=0.2.3
