Update to `pip>=21.1` in ?test-future.yml`
Fixes CVE-2021-3572 found by Safety:

```
-> Vulnerability found in pip version 20.0.2
   Vulnerability ID: 42559
   Affected spec: <21.1
   ADVISORY: A flaw was found in python-pip in the way it handled
   Unicode separators in git references. A remote attacker could possibly use...
   CVE-2021-3572
   For more information, please visit
   https://pyup.io/vulnerabilities/CVE-2021-3572/42559/
```

--- a/.github/workflows/test-future.yml
+++ b/.github/workflows/test-future.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Install dependencies
         run: |
           # strict dependency resolution added in pip 20.3
-          python -m pip install --upgrade 'pip>=20.3'
+          # CVE-2021-3572 fixed in pip 21.1
+          python -m pip install --upgrade 'pip>=21.1'
           pip install \
             --constraint=constraints-future.txt \
             --upgrade \
